apps/nginx-proxy-manager.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: npm
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy-manager
  namespace: npm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-proxy-manager
  template:
    metadata:
      labels:
        app: nginx-proxy-manager
    spec:
      hostNetwork: true # Permet à NPM d'écouter directement sur les ports 80/443/81 du Pi
      containers:
        - name: nginx-proxy-manager
          image: jlesage/nginx-proxy-manager:latest
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 81
          volumeMounts:
            - name: npm-data
              mountPath: /config
      volumes:
        - name: npm-data
          persistentVolumeClaim:
            claimName: npm-pvc
